--- a/index1.html
+++ b/index1.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
-<body onclick="alert('hello')">
-    <script src="index.js"></script>
+<body>
     
+    <script>
+        alert("hello")
+
+
+    </script>
 </body>
 </html>
